<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:labelFor="@+id/edtName" />
	 
    <EditText
        android:id="@+id/edtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        android:labelFor="@+id/edtDate" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignBottom="@+id/edtDate"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/txtTable_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_weight="1"
            android:background="@color/bg_blue"
            android:gravity="center_horizontal"
            android:text="@string/Week_Sun"
            android:textAlignment="center"
            android:textColor="@color/bg_dark_blue"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtTable_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/bg_blue"
            android:gravity="center_horizontal"
            android:text="@string/Week_Mon"
            android:textColor="@color/White" 
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/txtTable_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/bg_blue"
            android:gravity="center_horizontal"
            android:text="@string/Week_Tue"
            android:textColor="@color/White"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtTable_Created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/bg_blue"
            android:gravity="center_horizontal"
            android:text="@string/Week_Wed"
            android:textColor="@color/White" 
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/bg_blue"
            android:gravity="center_horizontal"
            android:text="@string/Week_Thu"
            android:textColor="@color/White"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/bg_blue"
            android:gravity="center_horizontal"
            android:text="@string/Week_Fri"
            android:textColor="@color/White" 
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/bg_blue"
            android:gravity="center_horizontal"
            android:text="@string/Week_Sat"
            android:textColor="@color/bg_dark_blue"
            android:textSize="15sp" />
    </LinearLayout>

    <GridView
        android:id="@+id/gridView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/Black"
        android:horizontalSpacing="1px"
        android:numColumns="7"
        android:verticalSpacing="1px" >
    </GridView>

    </RelativeLayout>

</ScrollView>
